<resources>
    <string name="app_name">Digital Nomad</string>

    <string name="sign_up">Dont have an accout? Sign up here!</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="email_email_com">Email</string>
    <string name="pass">Password</string>
    <string name="acc">Make an account</string>
    <item name="visible" type="id" />

    <item name="masked" type="id" />
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">986322564851247</string>
    <string name="fb_login_protocol_scheme">fb986322564851247</string>
    <string name="or">or</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="lockPass">lockPass</string>
    <string name="profile">Profile</string>
    <string name="your_workspaces">Your workspaces</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="resetpass">Set a new password</string>
    <string name="add">Add</string>
    <string name="add_workspace">Add your workspace</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="workspace_photo">Workspace_photo</string>
    <string name="opis_workspace_a">Opis workspace-a</string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="addPlus">+</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ocjena">Ocjena</string>
    <string name="accomodation">Accommodation</string>
    <string name="food">Food</string>
    <string name="wifi">WiFi</string>
    <string name="social_activities">Social activities</string>
    <string name="advancedsearch">Advanced search</string>
</resources>
