<resources>
    <string name="app_name">map</string>
    <string name="filtriraj">Filter:</string>
    <string name="accommodation">Accommodation</string>
    <string name="food">Food</string>
    <string name="wifi">WiFi</string>
    <string name="social_activities">Social activities</string>
    <string name="sort">Sort:</string>
    <string name="a_z">A-Z</string>
    <string name="price_lowest_highest">Price(lowest-highest)</string>
    <string name="search">Search</string>
    <string name="use_location">Use location</string>
    <string name="searchicon">SearchIcon</string>
    <string name="locationicon">LocationIcon</string>
</resources>
